@@ -1,11 +1,16 @@
 CMDBuild 2.4.1 (released YYYY/MM/DD)
 
 
+NEW FEATURES
+
+
 FIXES
 
  * Tab Email: widget configuration's presence also if widget doens't exists
 
  * REST logout error with header autenticator
+
+ * Menu available items wrong italian translations
 
 
 
